--- a/index.html
+++ b/index.html
@@ -22,13 +22,79 @@
     <header class="header">
 
         <div class="inner">
-            <h1><a href="/"><img src="./images/logo.png" alt="TISSOT"></a></h1>
+            <h1 class="logo"><a href="/"><img src="./images/logo.png" alt="TISSOT"></a></h1>
 
             <nav class="gnb">
                 <ul>
-                    <li><a href="">남자시계</a></li>
-                    <li><a href="">여자시계</a></li>
-                    <li><a href="">컬렉션</a></li>
+                    <li>
+                        <a href="">남자시계</a>
+                        <div class="sub">
+                            <div class="sub_right">
+                                <ul class="sub_con">
+                                    <li><a href="">남성 전용 라인</a></li>
+                                    <li><a href="">티쏘 씨스타</a></li>
+                                    <li><a href="">티쏘 PRX 35</a></li>
+                                    <li><a href="">티쏘 PR 100 스포츠 시크</a></li>
+                                    <li><a href="">티쏘 러블리</a></li>
+                                    <li><a href="">티쏘 에브리타임</a></li>
+                                    <li><a href="">티쏘 티 - 마이 레이디</a></li>
+                                    <li><a href="">모든 제품 보기</a></li>
+
+                                </ul>
+                            </div>
+                            <div class="sub_left">
+                                <div class="img_box">
+                                    <img src="./images/sub_menu01.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="">여자시계</a>
+                        <div class="sub">
+                            <div class="sub_right">
+                                <ul class="sub_con">
+                                    <li><a href="">여성 전용 라인</a></li>
+                                    <li><a href="">티쏘 씨스타</a></li>
+                                    <li><a href="">티쏘 PRX 35</a></li>
+                                    <li><a href="">티쏘 PR 100 스포츠 시크</a></li>
+                                    <li><a href="">티쏘 러블리</a></li>
+                                    <li><a href="">티쏘 에브리타임</a></li>
+                                    <li><a href="">티쏘 티 - 마이 레이디</a></li>
+                                    <li><a href="">모든 제품 보기</a></li>
+
+                                </ul>
+                            </div>
+                            <div class="sub_left">
+                                <div class="img_box">
+                                    <img src="./images/sub_menu02.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="">컬렉션</a>
+                        <div class="sub">
+                            <div class="sub_right">
+                                <ul class="sub_con">
+                                    <li><a href="">신제품</a></li>
+                                    <li><a href="">터치 컬렉션</a></li>
+                                    <li><a href="">티 - 클래식</a></li>
+                                    <li><a href="">티 - 스포츠</a></li>
+                                    <li><a href="">티 - 레이디</a></li>
+                                    <li><a href="">티 - 포켓</a></li>
+                                    <li><a href="">티 - 골드</a></li>
+                                    <li><a href="">헤리티지</a></li>
+
+                                </ul>
+                            </div>
+                            <div class="sub_left">
+                                <div class="img_box">
+                                    <img src="./images/sub_menu03.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </li>
                     <li><a href="">신제품</a></li>
                     <li><a href="">스트랩</a></li>
                 </ul>
@@ -133,6 +199,32 @@
     </main>
 
     <footer class="footer">
+
+        <div class="inner">
+            <div class="ft">
+                <ul class="customer">
+                    <li class="b"><a href="">개인정보처리방침</a></li>
+                    <li><a href="">이용 약관</a></li>
+                    <li><a href="">쿠키 세팅</a></li>
+                    <li><a href="">사업자정보확인</a></li>
+                    <li><a href="">반품 요청</a></li>
+                </ul>
+            </div>
+            <div class="fb">
+                <ul>
+                    <li>상호: 스와치그룹코리아 (주)</li>
+                    <li>대표 : RAYNALD AESCHLIMANN</li>
+                    <li>사업자등록번호: 220-81-01107</li>
+                    <li>주소 : 서울특별시 서대문구 충정로 36, 1,2,10,11층동(충정로3가)</li>
+                    <li>통신판매신고번호: 2018-서울서대문-0765</li>
+                    <li>전화:080-500-1853</li>
+                    <li>문의: eshop.kr@tissotwatches.com</li>
+                    <li>개인정보관리책임자: 이정익</li>
+                    <li>호스팅서비스사업자 : Exoscale</li>
+                    <li>&copy;TISSOT SA - SWISS WATCHES SINCE 1853 - ALL RIGHT RESERVED</li>
+                </ul>
+            </div>
+        </div>
 
     </footer>
 
