--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
 
         <div class="inner">
-            <h1 class="logo"><a href="/"><img src="./images/logo.png" alt="TISSOT"></a></h1>
+            <h1 class="logo"><a href="/"><img src="./images/logo.png" alt=""></a></h1>
 
             <nav class="gnb">
                 <ul>
@@ -106,6 +106,10 @@
             </div>
         </div>
 
+        <button class="mbtn">
+            <i class="xi-bars"></i>
+        </button>
+
     </header>
 
     <main>
@@ -128,25 +132,25 @@
                 <div class="left">
                     <div class="content_left_slide">
                         <div class="itm itm01">
-                            <figure><img src="./images/main_content_left_slide01.jpg" alt=""></figure>
+                            <figure><a href=""><img src="./images/main_content_left_slide01.jpg" alt=""></a></figure>
                         </div>
                         <div class="itm itm02">
-                            <figure><img src="./images/main_content_left_slide02.jpg" alt=""></figure>
+                            <figure><a href=""><img src="./images/main_content_left_slide02.jpg" alt=""></a></figure>
                         </div>
                         <div class="itm itm03">
-                            <figure><img src="./images/main_content_left_slide03.jpg" alt=""></figure>
+                            <figure><a href=""><img src="./images/main_content_left_slide03.jpg" alt=""></a></figure>
                         </div>
                         <div class="itm itm04">
-                            <figure><img src="./images/main_content_left_slide04.jpg" alt=""></figure>
+                            <figure><a href=""><img src="./images/main_content_left_slide04.jpg" alt=""></a></figure>
                         </div>
                         <div class="itm itm05">
-                            <figure><img src="./images/main_content_left_slide05.jpg" alt=""></figure>
+                            <figure><a href=""><img src="./images/main_content_left_slide05.jpg" alt=""></a></figure>
                         </div>
                         <div class="itm itm06">
-                            <figure><img src="./images/main_content_left_slide06.jpg" alt=""></figure>
+                            <figure><a href=""><img src="./images/main_content_left_slide06.jpg" alt=""></a></figure>
                         </div>
                         <div class="itm itm07">
-                            <figure><img src="./images/main_content_left_slide07.jpg" alt=""></figure>
+                            <figure><a href=""><img src="./images/main_content_left_slide07.jpg" alt=""></a></figure>
                         </div>
                     </div>
 
@@ -170,25 +174,25 @@
 
                     <div class="content_right_slide">
                         <div class="itm itm02">
-                            <figure><img src="./images/main_content_right_slide02.jpg" alt=""></figure>
+                            <figure><a href="   "><img src="./images/main_content_right_slide01.jpg" alt=""></a></figure>
                         </div>
                         <div class="itm itm03">
-                            <figure><img src="./images/main_content_right_slide03.jpg" alt=""></figure>
+                            <figure><a href=""><img src="./images/main_content_right_slide02.jpg" alt=""></a></figure>
                         </div>
                         <div class="itm itm04">
-                            <figure><img src="./images/main_content_right_slide04.jpg" alt=""></figure>
+                            <figure><a href=""><img src="./images/main_content_right_slide03.jpg" alt=""></a></figure>
                         </div>
                         <div class="itm itm05">
-                            <figure><img src="./images/main_content_right_slide05.jpg" alt=""></figure>
+                            <figure><a href=""><img src="./images/main_content_right_slide04.jpg" alt=""></a></figure>
                         </div>
                         <div class="itm itm06">
-                            <figure><img src="./images/main_content_right_slide06.jpg" alt=""></figure>
+                            <figure><a href=""><img src="./images/main_content_right_slide05.jpg" alt=""></a></figure>
                         </div>
                         <div class="itm itm07">
-                            <figure><img src="./images/main_content_right_slide07.jpg" alt=""></figure>
+                            <figure><a href=""><img src="./images/main_content_right_slide06.jpg" alt=""></a></figure>
                         </div>
                         <div class="itm itm01">
-                            <figure><img src="./images/main_content_right_slide01.jpg" alt=""></figure>
+                            <figure><a href=""><img src="./images/main_content_right_slide07.jpg" alt=""></a></figure>
                         </div>
                     </div>
                 </div>
@@ -228,6 +232,6 @@
 
     </footer>
 
-</body>
+</body ontouchstart="">
 
 </html>
