--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
             </div>
 
             <div class="main_visual_box">메인 비주얼 이미지</div>
+
+            <div class="scroll">
+                <span>scroll down</span>
+            </div>
         </section>
 
         <section class="main_content">
@@ -153,16 +157,19 @@
                             <figure><a href=""><img src="./images/main_content_left_slide07.jpg" alt=""></a></figure>
                         </div>
                     </div>
-
                 </div>
 
                 <div class="right">
                     <div class="content_right">
                         <div class="tit">
                             <h2>Tissot Collection</h2>
-                            <p>섬세하고 여성스러운 시계와 스포티한<br />
-                                크로노그래프까지 티쏘 시계는 언제나 당신을 위해 있을 것입니다.<br />
+                            <p>섬세하고 여성스러운 시계와 대담하고 스포티한<br />
+                                크로노그래프까지 티쏘는 언제나 당신을 위해 있을 것입니다.<br />
                                 다양한 소재, 색상, 무브먼트 옵션 중에서 완벽한 시계를 선택하세요.</p>
+
+                            <div class="ord">
+                                <a href="">more</a>
+                            </div>
                         </div>
 
                         <div class="arrows">
@@ -174,7 +181,8 @@
 
                     <div class="content_right_slide">
                         <div class="itm itm02">
-                            <figure><a href="   "><img src="./images/main_content_right_slide01.jpg" alt=""></a></figure>
+                            <figure><a href=""><img src="./images/main_content_right_slide01.jpg" alt=""></a>
+                            </figure>
                         </div>
                         <div class="itm itm03">
                             <figure><a href=""><img src="./images/main_content_right_slide02.jpg" alt=""></a></figure>
@@ -200,6 +208,103 @@
 
         </section>
 
+        <section class="main_banner default">
+            <div class="tit">
+                <h2>Technology</h2>
+                <p>티쏘만의 독자적인 기술을 만나보세요.</p>
+            </div>
+            <div class="inner">
+                <div class="banner_slide">
+                    <div class="itm itm01">
+                        <figure>
+                            <img src="./images/main_banner01.jpg" alt="">
+                            <div class="slg">
+                                <strong>스위스매틱</strong>
+                                <p>스위스매틱 무브먼트는 시계 업계에서 진정한 혁신입니다.<br />
+                                    매력적인 가격에 모델을 제공하는 티쏘의 비결은 다양한 부품을 제조한 뒤 모듈로 조립하여 완전한 무브먼트를 공급하는 자동 생산 라인에
+                                    있습니다.<br />
+                                    스위스매틱은 72시간의 파워리저브를 제공하므로 3일 동안 시계를 착용하지 않아도 계속 정확한 시간을 알려줍니다.
+                                </p>
+                            </div>
+                        </figure>
+                    </div>
+                    <div class="itm itm02">
+                        <figure>
+                            <img src="./images/main_banner02.jpg" alt="">
+                            <div class="slg">
+                                <strong>파워매틱 80</strong>
+                                <p>오토매틱 시계는 착용자의 움직임을 에너지원으로 작동합니다.<br />
+                                    파워매틱 80은 80시간의 파워리저브를 제공하므로 3일 동안 시계를 착용하지 않아도 계속 정확한 시간을 알려줍니다. <br />
+                                    일반적으로 1.5일의 파워리저브를 제공하는 경쟁사의 제품에 비해 혁신적이고 효율적인 무브먼트입니다.
+                                </p>
+                            </div>
+                        </figure>
+                    </div>
+                    <div class="itm itm03">
+                        <figure>
+                            <img src="./images/main_banner03.jpg" alt="">
+                            <div class="slg">
+                                <strong>니바크론™</strong>
+                                <p>일상 생활에서 전자제품(휴대폰, 컴퓨터, 라디오, 자석 등)에 의해 발생되는 자기장이 갈수록 많아짐에 따라<br />
+                                    티쏘는 시계의 정확성을 보장하기 위해 티타늄 기반의 새로운 차세대 합금을 개발했습니다.<br />
+                                    니바크론으로 만든 밸런스 스프링은 기존 밸런스 스프링에 비해 자기장에 대한 저항이 향상되어 자기장에 반응하지 않는 것으로 여겨집니다.
+                                </p>
+                            </div>
+                        </figure>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+
+        <section class="main_news default">
+            <div class="tit">
+                <h2>News</h2>
+                <p>티쏘의 최신 뉴스를 확인해보세요</p>
+            </div>
+
+            <div class="inner">
+                <div class="news_slide">
+                    <div class="itm">
+                        <figure>
+                            <a href=""><img src="./images/main_news01.jpg" alt=""></a>
+                        </figure>
+                        <div class="desc">
+                            <strong>PRX 데미안 릴라드 스페셜 에디션</strong>
+                            <p>티쏘가 NBA 올스타에 7번이나 선정된<br />
+                                데미안 릴라드(Damian Lillard)와의<br />
+                                콜라보레이션을 공개합니다.</p>
+                        </div>
+                    </div>
+                    <div class="itm">
+                        <figure>
+                            <a href=""><img src="./images/main_news02.jpg" alt=""></a>
+                        </figure>
+                        <div class="desc">
+                            <strong>Valjoux A05.291 무브먼트 살펴보기</strong>
+                            <p>새로운 PR516 크로노그래프 메커니컬을<br />
+                                위해 특별히 설계된 Valjoux A05.291<br />
+                                무브먼트를 처음으로 탑재합니다.</p>
+                        </div>
+                    </div>
+                    <div class="itm">
+                        <figure>
+                            <a href=""><img src="./images/main_news03.jpg" alt=""></a>
+                        </figure>
+                        <div class="desc">
+                            <strong>MotoGP™ 75주년 리미티드 에디션</strong>
+                            <p>티쏘는 모터사이클 DNA에서 영감을 받은<br />
+                                기술력과 디자인으로 독특한 시계를 선보이며<br />
+                                티-레이스 컬렉션을 확장합니다.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+
     </main>
 
     <footer class="footer">
@@ -218,20 +323,23 @@
                 <ul>
                     <li>상호: 스와치그룹코리아 (주)</li>
                     <li>대표 : RAYNALD AESCHLIMANN</li>
-                    <li>사업자등록번호: 220-81-01107</li>
                     <li>주소 : 서울특별시 서대문구 충정로 36, 1,2,10,11층동(충정로3가)</li>
+                    <li>전화 : 080-500-1853</li>
+                    <li>문의 : eshop.kr@tissotwatches.com</li>
+                    <li>사업자등록번호: 220-81-01107</li>
                     <li>통신판매신고번호: 2018-서울서대문-0765</li>
-                    <li>전화:080-500-1853</li>
-                    <li>문의: eshop.kr@tissotwatches.com</li>
                     <li>개인정보관리책임자: 이정익</li>
                     <li>호스팅서비스사업자 : Exoscale</li>
-                    <li>&copy;TISSOT SA - SWISS WATCHES SINCE 1853 - ALL RIGHT RESERVED</li>
+                    <li>&copy; TISSOT SA - SWISS WATCHES SINCE 1853 - ALL RIGHT RESERVED</li>
                 </ul>
             </div>
         </div>
 
     </footer>
 
-</body ontouchstart="">
+    <div class="to_top">
+        <button><i class="xi-arrow-right"></i></button>
+    </div>
+</body>
 
 </html>
