--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/slick.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css?ver=1.0">
 
     <script src="./js/jquery-1.12.4.js"></script>
     <script src="./js/slick.min.js"></script>
-    <script src="./js/custom.js"></script>
+    <script src="./js/custom.js?ver=1.0"></script>
 </head>
 
 <body>
